CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

31 August 2007
+ Text
   o Bug #1781552. Shortened urls now adds 3 characters to balance
     '...' replacement.
   o Added newline check to collapseUrl function.

30 August 2007
+ Database - getObjects now accepts the module and class filename as
  the second and third parameter. Prevents the class getting loaded
  until the results are verified.
+ xmlrpc - too many changes to list. The following is working:
  o listing entries
  o listing categories
  o posting new entry
  o editing previous entry (except in bloGTK)
  o deleting entry
+ There will only be one config.tpl in the new core and it will reside
  in core/inc. Branch and setup have been changed to grab the file
  from there.
  

29 August 2007
+ Added pears XML libs to default installation
+ Adding modified version of Eloi George's xml-rpc server

27 August 2007
+ Database
  o Added portability mode to database factory files.
  o Portability allowed removal of autoTrim function.
+ Default Theme - added theme tag and styling for a top menu

26 August 2007
+ Javascript - prompt no longer runs escape function on result
+ File.php - copy_directory fixes added. 
  o New error messages written to log depending on reason for file
    failure
  o Fixed bad logic on slash additions to directory.
  o copy_directory doesn't fail completely on one bad copy

22 August 2007
+ Added ability to add a class to the open_window javascript link or
button.
+ Default theme : some style adjustments for Layout's benefit

10 August 2007
+ Removed $this call in PHPWS_Text::decodeText function

Version 1.6.0 9 August 2007
------------------------------------------------------------------
8 August 2007
+ Text class
 o Removed use_smilies setting
 o Fixed bb filter : was making smilies inside tags
 o Added pear bb filter
 o ALLOW_TEXT_FILTERS = false will now turn off all text filtering mods